// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 1`] = `
.emotion-0 {
  cursor: default;
}

.emotion-0 .title {
  font-size: 12px;
}

.emotion-0 .file-type-icon span {
  width: 14px!important;
  height: 14px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 2`] = `
.emotion-0 {
  cursor: default;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 3`] = `
.emotion-0 {
  cursor: default;
}

.emotion-0 .overlay {
  padding: 24px;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-size {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 18px!important;
  height: 18px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 4`] = `
.emotion-0 {
  border-radius: 2px;
  cursor: default;
}

.emotion-0 .title {
  font-size: 16px;
}

.emotion-0 .file-size {
  font-size: 14px;
}

.emotion-0 .wrapper,
.emotion-0 .img-wrapper {
  border-radius: 2px;
}

.emotion-0 .overlay {
  padding: 24px;
}

.emotion-0 .file-type-icon span {
  width: 18px!important;
  height: 18px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should render properly with default properties 1`] = `
.emotion-0 {
  cursor: default;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 1`] = `
.emotion-0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
  cursor: default;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 2`] = `
.emotion-0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
  cursor: default;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should render right cursor when shouldUsePointerCursor is passed 1`] = `
.emotion-0 {
  cursor: pointer;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;

exports[`Root Wrapper File should render right cursor when shouldUsePointerCursor is passed 2`] = `
.emotion-0 {
  cursor: default;
}

.emotion-0 .title {
  font-size: 14px;
}

.emotion-0 .file-type-icon span {
  width: 16px!important;
  height: 16px!important;
}

<div
  className="emotion-0"
  id="cardViewWrapper"
/>
`;
